js/js.translator/testData/incremental/invalidation/mainFunction/main/f.1.kt
package foo.bar

var ok = "Fail"

fun main() {
    ok = "OK"
}
